--- a/Pertemuan4/praktikum4brian.ipynb
+++ b/Pertemuan4/praktikum4brian.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "4    ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "4       0  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -8366,11 +8366,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "# **Training dan Evaluasi Model**\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil akurasi data train: 0.9946152120260264\n",
+      "Hasil akurasi data test: 0.9775784753363229\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Inisiasi MultinomialNB\n",
+    "mnb = MultinomialNB()\n",
+    "\n",
+    "# Fit model\n",
+    "mnb.fit(X_train, y_train)\n",
+    "\n",
+    "# Prediksi dengan data training\n",
+    "y_pred_train = mnb.predict(X_train)\n",
+    "\n",
+    "# Evaluasi akurasi data training\n",
+    "acc_train = accuracy_score(y_train, y_pred_train)\n",
+    "\n",
+    "# Prediksi dengan data training\n",
+    "y_pred_test = mnb.predict(X_test)\n",
+    "\n",
+    "# Evaluasi akurasi data training\n",
+    "acc_test = accuracy_score(y_test, y_pred_test)\n",
+    "\n",
+    "# Print hasil evaluasi\n",
+    "print(f'Hasil akurasi data train: {acc_train}')\n",
+    "print(f'Hasil akurasi data test: {acc_test}')"
+   ]
   }
  ],
  "metadata": {
