--- a/Pertemuan4/tugaspraktikumbrian.ipynb
+++ b/Pertemuan4/tugaspraktikumbrian.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# **Praktikum 3 - Tugas Praktikum Klasifikasi**\n",
+    "# **Tugas Praktikum Klasifikasi - Pertemuan 4**\n",
     "---"
    ]
   },
