--- a/Pertemuan3/tugaspraktikumbrian.ipynb
+++ b/Pertemuan3/tugaspraktikumbrian.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "## Intruksi Umum\n",
     "1. Anda akan menggunakan dataset \"Medical Cost Personal Datasets\". Pastikan Anda telah mengunduh dataset ini.\n",
-    "2. Gunakan bahasa pemrograman Python dan library yang sesuai seperti NumPy, Pandas, Matplotlib dan Scikit-Learn untuk melakukan analisis regresi dan SVR.\n"
+    "2. Gunakan bahasa pemrograman Python dan library yang sesuai seperti NumPy, Pandas, Matplotlib dan Scikit-Learn untuk analisis regresi dan SVR.\n"
    ]
   },
   {
