--- a/Pertemuan4/tugaspraktikumbrian.ipynb
+++ b/Pertemuan4/tugaspraktikumbrian.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Buatlah model klasifikasi dengan menggunakan SVM untuk data suara, voice.csv. "
+    "1. Buatlah model klasifikasi dengan menggunakan SVM untuk data suara, voice.csv "
    ]
   },
   {
