--- a/Pertemuan2/tugaspraktikumbrian.ipynb
+++ b/Pertemuan2/tugaspraktikumbrian.ipynb
@@ -17,7 +17,7 @@
     "## **Deskripsi Tugas**\n",
     "### Pada tugas pratikum ini Anda akan menggunakan data \"Wisconsin Breast Cancer\". Data tersebut terdiri dari 569 data yang digunakan untuk mendiagnonis jenis kanker Malignant (M) dan Benign (B). Tugas Anda adalah,\n",
     "##### 1. Pisahkan antara variabel yang dapat digunakan dan variabel yang tidak dapat digunakan.\n",
-    "##### 2. Lakukan proses encoding pada kolom \"diagnosis\".\n",
+    "##### 2. Lakukan proses encoding pada kolom diagnosis.\n",
     "##### 3. Lakukan proses standarisasi pada semua kolom yang memiliki nilai numerik.\n",
     "##### 4. Lakukan proses stratified split data untuk membuat data latih dan data uji dengan rasio 80:20.\n",
     "---"
