--- a/Kuis2/kuis2brian.ipynb
+++ b/Kuis2/kuis2brian.ipynb
@@ -2874,7 +2874,7 @@
         "---\n",
         "# **Kesimpulan Hasil**\n",
         "---\n",
-        "Dari hasil model CNN yang  dilatih sebelumnya, hasil prediksinya sangat akurat, namun masih salah untuk gambar dengan input “B” kecil di atas. Hal ini mungkin juga disebabkan oleh kesamaan. Oleh karena itu, model membuat prediksi berdasarkan indeks nama_label ke-6 yang bernilai '6'."
+        "Dari hasil model CNN yang  dilatih sebelumnya, hasil prediksinya sangat akurat, namun masih salah untuk gambar dengan input “B kecil” di atas. Hal ini mungkin juga disebabkan oleh kesamaan. Oleh karena itu, model membuat prediksi berdasarkan indeks nama_label ke-6 yang bernilai '6'."
       ]
     }
   ],
