--- a/UAS/UASMachineLearning_BrianFebryanFafan.ipynb
+++ b/UAS/UASMachineLearning_BrianFebryanFafan.ipynb
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -135,7 +135,7 @@
         "id": "XzKNjJ-NHnNM",
         "outputId": "fe117008-b6b5-49ce-b930-a49f8247aa50"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -176,7 +176,7 @@
         "id": "eCNGnNqNQK2z",
         "outputId": "b4b3d155-bad1-413a-87e7-6e7c8b57d20f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "hbVyovKKXj3k"
       },
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -505,6 +505,15 @@
         "-  Menjelaskan cara model dapat diintegrasikan dan digunakan dalam aplikasi mobile.\n",
         "- Menyediakan dokumentasi yang lengkap untuk seluruh proyek, termasuk langkah-langkah pelatihan model, pengujian"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Pindah screen dilanjutkan ke demo ocr pada aplikasi"
+      ],
+      "metadata": {
+        "id": "l_V_B0k4i1JR"
+      }
     }
   ],
   "metadata": {
